# Receptor

./: CMakeLists.txt  README.md  resize.py  testtensorflow.py  trainval.py  trash.txt
CustomDataset/: create_data.sh  find.py  move.py  object_detection.pbtx  remove.py  ssd_mobilenet_v1_coco.config  test.csv  train.csv
CustomDataset/Labels/: 01U9MU.xml  02DUZZK.xml  071RP5.xml  086AJV.xml  08AND3.xml  09GEKY.xml  0ACEUI.xml  0AN84E.xml  0BZWF5F.xml  0DA2XJ.xml  0DF1H2.xml  0DZ2U0.xml  0FLH9V.xml  0FWJ3E.xml  0GN1CTX.xml  0GZX9V.xml  0HH632.xml  0I1H3X.xml  0L8FDZ.xml  0LR3YPQ.xml  0M05L7.xml  0MEBDU.xml  0N5LDX.xml  0OJOJK.xml  0OYWF7.xml  0QCHMG5.xml  0QG7E6.xml  0QK37A.xml  0QYTLBO.xml  0TLLF2.xml  0TWO89.xml  0UHVNO.xml  0XI1PW.xml  0ZTJC3.xml  10500L.xml  105NZL.xml  106NX9.xml  11ZZ1KZ.xml  (+1638 more)
application/: main.cpp
detection/: graph.pbtxt  labels.txt
include/: NetPath.hpp  Recipes.hpp  classificator.hpp  detectedobject.hpp  detector.hpp  test.hpp
menu/: menu.txt
object_detection_retraining/: generate_tfrecord.py  test.csv  test.record  train.csv  train.record
py/: rand.py  res.py
recipes/: 1_recipes.txt  2_classes.txt  Baked_potato.txt  Cauliflower_and_broccoli_in_a_slow_cooker.txt  Cucumber_and_tomato_salad.txt  Fried_potatoes_with_mushrooms.txt  Loaf_and_strawberry.txt  Rice_with_vegetables.txt  Sandwich.txt  menu.txt
scripts/: generate_tfrecord.py  resize.py  sort_graph.py  tf_text_graph_ssd.py
src/: CMakeLists.txt  NetPath.cpp  Recipes.cpp  classificator.cpp  detector.cpp  test.cpp
ssd_mobilenet_v1_coco_2018_01_28/: ssd_mobilenet_v1_coco.config
(+803 files in other folders)
